--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="30dp"
     android:paddingRight="30dp"
     android:gravity="center"
+    android:fitsSystemWindows="true"
     android:id="@+id/linearLayoutLogin"
     android:orientation="vertical">
 
