--- a/app/src/main/res/layout/fragment_add_listing.xml
+++ b/app/src/main/res/layout/fragment_add_listing.xml
@@ -10,6 +10,7 @@
     android:layout_marginBottom="70dp"
     android:id="@+id/linearLayoutListing"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".AddListingFragment">
 
         <TextView
@@ -64,8 +65,11 @@
             android:ems="10"
             android:hint="@string/item_expiration_hint"
             android:importantForAutofill="no"
+            android:padding="16dp"
+            android:focusable="true"
             android:inputType="date"
-            android:padding="16dp" />
+            android:focusableInTouchMode="false"
+            android:clickable="true"/>
 
         <Button
             android:id="@+id/submitBtn"
