--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="light_blue">#E8E7EA</color>
     <color name="blue">#9AA5AF</color>
     <color name="green">#64876B</color>
+    <color name="dark_green_text">#314531</color>
 </resources>
