--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_baseline_person_24"
         android:title="@string/title_profile" />
 
+    <item
+        android:id="@id/navigation_messages"
+        android:icon="@drawable/ic_baseline_mail_24"
+        android:title="@string/title_messages" />
+
 </menu>
