--- a/app/src/main/res/drawable/receiver_messages_layout.xml
+++ b/app/src/main/res/drawable/receiver_messages_layout.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid android:color="#FFFFFF"/>
-
-    <corners android:radius="15dp"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:right="20dp">
+        <rotate
+            android:fromDegrees="35"
+            android:pivotX="0%"
+            android:pivotY="100%"
+            android:toDegrees="0">
+            <shape android:shape="rectangle">
+                <solid android:color="@color/light_blue" />
+            </shape>
+        </rotate>
+    </item>
+    <item android:left="5dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/light_blue" />
+            <corners android:radius="8dp" />
+        </shape>
+    </item>
+</layer-list>
