--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_blue"
+    android:background="@color/white"
     tools:context=".MessageActivity">
 
     <include
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:background="@color/background_cream"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <EditText
@@ -35,17 +35,21 @@
             android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:hint="@string/message_here"
-            android:padding="18dp"
+            android:padding="10dp"
             android:layout_marginStart="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             android:importantForAutofill="no"
-            android:inputType="text" />
+            android:inputType="text"
+            android:background="@drawable/round_border"/>
 
         <ImageButton
             android:id="@+id/send_btn"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_baseline_send_24"
+            android:src="@drawable/ic_send_button_01"
+            android:background="#0000"
             tools:ignore="ContentDescription">
         </ImageButton>
 
