--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -125,10 +125,19 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/settings_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/settings"
+        android:background="@drawable/round_btn"
+        android:layout_marginTop="50dp"/>
+
+    <Button
         android:id="@+id/sign_out"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sign_out"
-        android:layout_marginTop="50dp"/>
+        android:background="@drawable/round_btn"
+        android:layout_marginTop="10dp"/>
 </LinearLayout>
 
