--- a/app/src/main/res/layout/custom_message_bar.xml
+++ b/app/src/main/res/layout/custom_message_bar.xml
@@ -4,6 +4,17 @@
     android:layout_height="match_parent"
     android:background="@color/green">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/custom_profile_image"
+        android:layout_width="47dp"
+        android:layout_height="47dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/profile_image"
+        android:cropToPadding="true"
+        android:layout_marginRight="10dp"
+        />
+
     <TextView
         android:id="@+id/profile_name"
         android:layout_width="wrap_content"
