--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,37 +9,58 @@
     android:orientation="vertical"
     tools:context=".ProfileFragment">
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/hello"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/visit_profile_image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/profile_image"
+            android:layout_marginTop="30dp"
+            app:civ_border_color="@color/green"
+            app:civ_border_width="5dp"/>
+
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
-            android:text="@string/profile_hello"
-            android:textSize="30sp"/>
+            android:layout_gravity="top"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="236dp"
-            android:layout_height="66dp"
-            android:layout_marginTop="52dp"
-            android:layout_marginStart="8dp"
-            android:ems="10"
-            android:text="@string/profile_name"
-            android:textSize="30sp"/>
+            <TextView
+                android:id="@+id/hello"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="64dp"
+                android:layout_marginStart="10dp"
+                android:text="@string/profile_hello"
+                android:textSize="28sp"
+                android:textColor="@color/dark_green_text"
+                />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="66dp"
+                android:layout_marginStart="10dp"
+                android:ems="10"
+                android:text="@string/profile_name"
+                android:textSize="28sp"
+                android:textColor="@color/dark_green_text"/>
+        </LinearLayout>
+
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/impact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="13dp"
+        android:layout_marginTop="30dp"
         android:text="@string/total_impact"
         android:textSize="18sp"/>
 
@@ -130,7 +151,7 @@
         android:layout_height="wrap_content"
         android:text="@string/settings"
         android:background="@drawable/round_btn"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="30dp"/>
 
     <Button
         android:id="@+id/sign_out"
