--- a/app/src/main/res/layout/users_display_layout.xml
+++ b/app/src/main/res/layout/users_display_layout.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_margin="5dp">
+    android:layout_height="wrap_content"
+    android:background="@drawable/borderbottom">
 
-    <TextView
-        android:id="@+id/user_profile_name"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/user_name"
-        android:textAlignment="textStart"
-        android:textSize="25sp"
-        android:textColor="@color/green"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="40dp"
-        />
+        android:layout_margin="15dp"
+        android:orientation="horizontal">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/users_profile_image"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/profile_image"/>
+
+        <TextView
+            android:id="@+id/user_profile_name"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/username"
+            android:textSize="20sp"
+            android:textColor="@color/dark_green_text"
+            android:layout_marginStart="30dp"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
