--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -30,26 +30,36 @@
         android:background="@color/white"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/add_image_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="7dp"
+            android:src="@drawable/ic_baseline_add_circle_outline_50"
+            android:background="#0000"
+            tools:ignore="ContentDescription"
+            android:layout_gravity="start"/>
+
         <EditText
             android:id="@+id/input_message"
-            android:layout_width="340dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="@string/message_here"
             android:padding="10dp"
-            android:layout_marginStart="10dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:importantForAutofill="no"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             android:background="@drawable/round_border"/>
 
         <ImageButton
             android:id="@+id/send_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="7dp"
             android:src="@drawable/ic_send_button_01"
             android:background="#0000"
+            android:layout_gravity="end"
             tools:ignore="ContentDescription">
         </ImageButton>
 
