--- a/app/src/main/res/layout/fragment_add_listing.xml
+++ b/app/src/main/res/layout/fragment_add_listing.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,21 +14,20 @@
     android:fitsSystemWindows="true"
     tools:context=".AddListingFragment">
 
-        <TextView
-            android:id="@+id/newListing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_gravity="start"
-            android:text="@string/new_listing_title"
-            android:textSize="30sp"
-            android:textColor="@color/dark_green_text"/>
+
+        <ImageView
+            android:id="@+id/listing_image_view"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_add_image_listing"
+            />
 
         <EditText
             android:id="@+id/itemTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/round_border"
             android:drawableStart="@drawable/ic_baseline_add_box_24"
@@ -36,22 +36,6 @@
             android:hint="@string/item_hint"
             android:importantForAutofill="no"
             android:inputType="textPersonName"
-            android:padding="16dp" />
-
-        <EditText
-            android:id="@+id/itemDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/round_border"
-            android:drawableStart="@drawable/ic_baseline_list_24"
-            android:drawablePadding="4dp"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="@string/item_details_hint"
-            android:importantForAutofill="no"
-            android:inputType="textMultiLine"
             android:padding="16dp" />
 
         <EditText
