--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="blue">#9AA5AF</color>
     <color name="green">#64876B</color>
     <color name="dark_green_text">#314531</color>
+    <color name="dark_gray">#707070</color>
 </resources>
