--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -13,49 +13,77 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/green"
-        android:padding="16dp">
+        android:background="@color/white"
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/listing_image_view"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:scaleType="centerCrop" />
+
 
         <TextView
+            android:id="@+id/listingTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/listingTitle"
-            android:text="@string/listing_title"
             android:layout_marginStart="8dp"
-            android:textColor="@color/white"
-            android:layout_alignParentTop="true"
+            android:layout_marginTop="17dp"
+            android:layout_marginBottom="10dp"
+            android:layout_toEndOf="@id/listing_image_view"
+            android:text="@string/listing_title"
+            android:textColor="@color/dark_green_text"
             android:textSize="22sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/listingDesc"
-            android:text="@string/listing_desc"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="12dp"
-            android:textColor="@color/text_green"
-            android:layout_below="@+id/listingTitle" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/expirationDate"
-            android:text="@string/expiration_date"
-            android:textSize="14sp"
-            android:layout_toStartOf="@id/listingDate"
-            android:layout_below="@+id/listingDesc"
-            android:layout_marginEnd="5dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/listing_profile_image"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/listingTitle"
+            android:layout_toEndOf="@id/listing_image_view"
+            android:cropToPadding="true"
+            android:src="@drawable/profile_image"
+            android:layout_marginStart="8dp"/>
 
-            android:textColor="@color/text_green"/>
         <TextView
+            android:id="@+id/username_listing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/listingTitle"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@id/listing_profile_image"
+            android:text="@string/username"
+            android:textColor="@color/dark_green_text"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/expirationDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username_listing"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_toStartOf="@id/listingDate"
+            android:layout_toEndOf="@id/listing_image_view"
+            android:text="@string/expiration_date"
+            android:textColor="@color/dark_gray"
+            android:textSize="14sp" />
+
+        <TextView
             android:id="@+id/listingDate"
-            android:text="@string/listing_date"
-            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username_listing"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="8dp"
-            android:textColor="@color/text_green"
-            android:layout_below="@+id/listingDesc" />
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="70dp"
+            android:text="@string/listing_date"
+            android:textColor="@color/dark_gray"
+            android:textSize="14sp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
